# vuetom-rs

./: Cargo.toml  README.md  crates-io.md
test_suite/: Cargo.toml
test_suite/tests/: test_dc.rs
vuetom/: Cargo.toml  build.rs
vuetom/src/: lib.rs
vuetom_dc/: Cargo.toml  LICENSE-MIT  README.md  build.rs  crates-io.md
vuetom_dc/src/: func.rs  lib.rs
vuetom_dc/src/util/: count.rs
